# FairPlay-LeagueGenerator

./: CMakeLists.txt
LeagueGenerator/: CMakeLists.txt  LeagueGenerator.h  main.cpp
