# CMakeList.txt : CMake project for LeagueGenerator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (LeagueGenerator "LeagueGenerator.cpp" "LeagueGenerator.h" "main.cpp")

# TODO: Add tests and install targets if needed.
